--- a/.env.local.template
+++ b/.env.local.template
@@ -1,2 +1,2 @@
-VITE_OPENAI=[Your OpenAI API Key]
-VITE_OWM=[Your Open Weather Map API Key]
+# VITE_OPENAI=[Your OpenAI API Key]
+VITE_OWM=f5d28c927fd5ba3daf883e46c3a24b3d
